--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,10 +34,24 @@ clap = { git = "https://github.com/zkat/clap" }
 fern = "0.6.0"
 log = "0.4.11"
 smol = "0.1.18"
+tauri = "0.9.2"
+serde_json = "1.0.57"
+serde = "1.0.115"
+
+[target."cfg(windows)".build-dependencies]
+winres = "0.1"
+
+[features]
+embedded-server = [ "tauri/embedded-server" ]
+no-server = [ "tauri/no-server" ]
 
 [build-dependencies]
 embed-resource = "1.3.3"
 
 [[bin]]
 name = "oro"
-path = "src/main.rs"
+path = "src/main-cli.rs"
+
+[[bin]]
+name = "oro-gui"
+path = "src/main-gui.rs"
